--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "framer-motion": "^11.1.7",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.2",
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.2",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
