--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-textra": "^0.2.0",
     "react-whatsapp": "^0.3.0",
     "web-vitals": "^2.1.4"
   },
