--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.16.4",
     "aos": "^2.3.4",
     "framer-motion": "^11.1.7",
     "i18next": "^23.5.1",
