--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "antd": "^5.16.4",
     "aos": "^2.3.4",
     "framer-motion": "^11.1.7",
+    "fs": "^0.0.1-security",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.2",
+    "prerender-spa-plugin": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^13.2.2",
     "react-icons": "^5.0.1",
+    "react-image-particles": "^1.0.8",
     "react-intersection-observer": "^9.8.2",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
@@ -27,11 +31,13 @@
     "react-spinners": "^0.13.8",
     "react-textra": "^0.2.0",
     "react-whatsapp": "^0.3.0",
+    "sitemap": "^7.1.1",
+    "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && node prerender.js && node sitemap.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
