--- a/package.json
+++ b/package.json
@@ -19,20 +19,26 @@
     "i18next-http-backend": "^2.2.2",
     "prerender-spa-plugin": "^3.4.0",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-i18next": "^13.2.2",
     "react-icons": "^5.0.1",
     "react-image-particles": "^1.0.8",
     "react-intersection-observer": "^9.8.2",
+    "react-particles": "^2.12.2",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-spring": "^9.7.4",
+    "react-spring-3d-carousel": "^1.3.4",
     "react-textra": "^0.2.0",
     "react-whatsapp": "^0.3.0",
     "sitemap": "^7.1.1",
     "stream": "^0.0.2",
+    "tsparticles-slim": "^2.12.0",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
